# picopocket-hw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.spdx  PICO_W.kicad_sym  picopocket.kicad_pcb  picopocket.kicad_pro  picopocket.kicad_sch  sym-lib-table
board/: picopocket.kicad_dru  picopocket.kicad_pcb  picopocket.kicad_pro
board/libs/: XKB Male 80P 0.5P.kicad_mod
board/production/: designators.csv
boards/: board.h
carrierboard/: carrierboard.kicad_pcb  carrierboard.kicad_pro  carrierboard.kicad_sch
companionboard/: companion_board.kicad_pcb  companion_board.kicad_pro  companion_board.kicad_sch
companionboard/lib/: EDGE-14.kicad_mod
hw_lib/: CMakeLists.txt  apdm.pio  ar1021.pio  audio_i2s.pio  isa_dma.pio  isa_worker.cpp  psram.pio
hw_lib/include/: ar1021.hpp  audio_dma.hpp  audio_in.hpp  isa_worker.hpp  psram_pio.hpp
hw_lib_sim/: CMakeLists.txt  isa_worker.cpp
hw_lib_sim/include/: ar1021.hpp  audio_dma.hpp  isa_worker.hpp  psram_pio.hpp
jmpcoro_lib/: CMakeLists.txt
jmpcoro_lib/include/: jmpcoro.hpp
libs/: MODULE_SC0918.kicad_mod  XKB Male 80P 0.5P.kicad_mod
production/: bom.csv  netlist.ipc  positions.csv
test_fw/: CMakeLists.txt
test_fw/or/: CMakeLists.txt  Makefile  biosint.h  checksum.py  init.S  inlines.h  link.lnk  main.c
test_fw/pico/: ATTRIBUTIONS  CMakeLists.txt  S16LE2_44100.hpp  S16LE2_44100.s  S8LE2_22050.raw  jmpcoro_configured.hpp  main.cpp  ram_scratchy.ld  testd.cpp  testd.hpp  usb.cpp  usb_descriptors.c
test_fw/pico/tusb/: tusb_config.h
tracer/: CMakeLists.txt  fifo.hpp  main.cpp  tracer.py  tusb_config.h  usb_descriptors.c
